binrw/tests/ui/invalid_offset_type.stderr
error[E0308]: mismatched types
 --> $DIR/invalid_offset_type.rs:7:19
  |
7 |     #[br(offset = a)]
  |                   ^ expected `u64`, found `u8`
  |
note: return type inferred to be `u64` here
 --> $DIR/invalid_offset_type.rs:4:10
  |
4 | #[derive(BinRead)]
  |          ^^^^^^^

error[E0308]: mismatched types
 --> $DIR/invalid_offset_type.rs:9:25
  |
9 |     #[br(offset_after = d)]
  |                         ^ expected `u64`, found `u8`
  |
note: return type inferred to be `u64` here
 --> $DIR/invalid_offset_type.rs:4:10
  |
4 | #[derive(BinRead)]
  |          ^^^^^^^
